--- a/source/_posts/和小宇要说的话.md
+++ b/source/_posts/和小宇要说的话.md
@@ -3,24 +3,777 @@ author: 远方
 date: 2019-08-31 14:56:14
 tags:
 ---
-和小宇要说的话
+# 和小宇要说的话
 
-思考了一下，还是要重新写一下。之前写的(近)两万字深度不够，认知不到位，逻辑架构和表述均不理想，重点不明，条例不清，因而决定重新写一下。
-	首先明确要有哪几部分要写。第一部分：对自我的认知。这一部分只要表述之前对自我认知的局限，以及这些局限的原因剖析；第二部分：对恋爱关系中相处方式不当的认知，这一部分主要分析在先前相处中的不当行为，并为防范或减少这些行为制定相应措施；第三部分，和小宇相处的细节整理，并作分析；第四部分，和小宇相处的规划安排。
 
-对自我的认知
-性格分析
-功利心、浮躁
+## 前言
+源于暑假的一次争吵，答应了写这篇文章。起初立意定在道歉，后来转变为反思。当初写完近两万字之后，感觉深度不够，比较肤浅，认知不到位，逻辑架构和表述均不理想，重点不明，条理不清。决定推翻从来，重新来写。
+
+由于自己的拖延，这篇文章一直处于难产状态，进度停滞不前，直至前两天又一次爆发，我才最终下定决心把欠的这篇文章写完。尽管刚开始的时候一筹莫展，不知从何开始写起，头脑里一片混沌，但慢慢梳理，学习别人的经验，逐步把内容充实了起来。
+
+在这个过程中，深刻的感受到，我的精神世界太空了。思想的封闭，局限，浅显而没有深度，使得自己常常陷入困局，不知所措。
+
+写完这篇文章，收获还是很大的。最大的感受莫过于，我没做好男朋友的角色，根本在于我没做好我自己。之前小宇说的我存在的诸多问题，在这些整理过程中，我也有了更深的理解。
+
+这篇文章分为一下四个部分：第一部分，先前数次争吵的回顾，意在不断提醒自己；第二部分，对自我性格进行剖析，借鉴别人经验以找到适合自己的方案；第三部分，对恋爱关系中相处方式不当的认知，参考一些比较有价值的文章，用于以后相处的指导；第四部分，和小宇相处过程中的一些细节整理。
+
+谨以此文献给我家可爱又可怜的小宇宇，也以此文提醒我做好我自己，照顾好小宇宇。
+
+### 回音墙
+
+- 放狠话 你爱咋地就咋地 老子不伺候了 我还不问了
+- 咱俩就是没有共同语言
+- 你说你前女友总是愁眉苦脸 对未来没有信心，你本来信心满满结果被搞得意志不坚定
+- 你现在就变成跟你前女友一样
+- 你说过多少次你不会再叹气了
+- 结果呢
+- 好吃懒做 眼高手低 怨天尤人 自卑感作祟 不努力想着天下掉馅饼 孩子你醒醒吧
+- 自己这个不行 那个不行 你不做当然不行
+- 你自己说我对你要求过什么嘛？
+- 我就是希望咱俩在一起的时候能开心快乐
+- 结果呢，你跟我说什么你就是普通人 大哥 这跟咱俩开心快乐有一毛钱关系嘛？
+- 我让你上天了还是入地了？
+- 平时虚头巴脑的话一大堆，都是谎言，事情发生了，真让你办事的时候一个屁捅不出来
+- 你平时嘴巴不是挺会讲嘛，那你现在倒是说啊
+- 你负能量的时候，我开导你，让你不要叹气，小小年纪像80岁老头一样天天叹气，有问题就解决，结果呢，你告诉我你只是一个普通人，大哥我对你要求什么了嘛
+- 你爱死爱活其实跟我有什么关系呢，不过是因为我是你女朋友，我希望这段感情能让你觉得你是有收获的，有成长的。
+- 要不然我才懒得说你
+- 你之前总是标榜自己性格趋于完美，但是跟你接触的这段时间，说长不长说短不短，我发现你是一个不能正确认识自己的人。
+
+- 现在你可能因为自己的事情烦躁不想理我，以后可能随时不想理我就不理我。见微知著，以后可能就是这样。
+- 这个世界上那么多人，你为什么偏偏找上了我？我到底做错了什么，你要这样对我？
+- 如果不是这次偶然的发现，你打算瞒我多久？你就这么心安理得理所当然地享受着这一切，享受着我对你的好？
+- 不断地麻痹自己，那都是过去的事，我只要以后好好对她就好了。
+- 之前我那么相信你，你却对我这样。你对我还有哪些是真的？
+- 我之前从来不相信人可以这么坏，这次却让我遇到了。不过也好，以后我就知道了
+- 曾经的我那么相信你，现在我再也不敢相信你
+- 你对别人怎么样，把这些手段用在其他方面都可以，可以你居然用在我身上，用在家里的女朋友身上
+- 或许未来你可以遇到一个啥也不知道，不在乎的女朋友或者遇到一个喜欢和你一起有各种心思的女朋友，但我不是，我不希望我的感情是这个样子。
+
+- 以后你不要这样了，我当时看到心都碎了
+- 你要把我推走，推给别人
+
+- 我就要看看你能有多渣
+
+- 对我好一点
+
+- 你就是不把我当回事
+- 你是不是以为我是你的附庸，可有可无的
+- 我真的搞不懂，你哪来的勇气，说出那种我靠你养的话？
+- 靠你，你觉得你靠得住么？
+- 我现在特别害怕，我觉得你是魔鬼，而且是靠不住的那种。
+- 我现在越来越有种感觉，就是你不能成为我的依靠
+- 其实，每次说完你有点变化，但是，保质期三天
+- 我希望你在我面前，不需要伪装。
+- 你要有责任感啊，未来像魔鬼一样
+
+## 透视镜
+
+### 功利心、浮躁
+
 这一点主要体现为日常生活和工作中急于求成，缺乏长期做一件事的耐心和毅力。希望做一件事能够时得到正面的反馈，以给予下一阶段行程以信心和动力。在学习中，表现为缺乏专研、啃磨的耐力，希望能够短时间内掌握并运用所学知识。在工作中，表现为工作状态不稳定，遇到灵光一闪，可以熬夜工作，而过一阵儿进入平滑期，开始拖沓了起来。就看文献而言，也是如此，常常缺乏耐心仔细看完，但看一段稍微有些感觉之后，倒也愿意耐下心去做。
+
 分析这一心理成因：一是缺乏信心和安全感，依赖于外在的肯定而缺乏对自己预期能力的评估，也可以理解为短视；二是大学之前的学习阶段频繁强化的反馈使得自己及其依赖这种感觉，而进入大学这种反馈的周期太长，心中对达成目标的愿望就不断被强化。
+
 而浮躁来源于求而不得，无从下手的茫然状态。信心的缺失强化对自己的否定，累计的失败的努力尝试慢慢磨灭了自己的斗志，而又不甘心也不敢彻底放手不学习，从而表现为浮躁的状态。
 深层次来看，潜意识里缺乏对规则的认知。10天完成的事，我缺乏对十天按部就班就能完成任务的信心，这种想法很诡异。缺乏自己下决定并一步步按照逻辑和计划执行最终达到目标的信心。
+
 同样，这一点在感情上也有体现。之前相处的时候，自己做的事，一定要让小宇知道，表现自己做了，用功了，希望得到表扬。但缺乏深入的思考，设身处地地为她所想，找到她真正需要的东西。同时在言行上表现为不一致，说的多但做的少，说的时候是想让她开心，但该做的时候却因为各种莫须有的理由拖沓。同时渲染的时候太夸张，不接地气，也是缺乏踏踏实实做事情的心。
-眼高手低
+
+```
+长期保持着功利心理其实是很痛苦的。其实成功只是我们在追求自己喜欢的事物的附带品，是我们幸福快乐的附属品，而不是成功带给了我们幸福和快乐。只要相信，只有幸福快乐才能带来成功，而功利心太强则会让人不快乐，从而会使自己不成功。
+```
+
+### 眼高手低
+
 这一点主要体现为做事之前感觉事情很简单，很轻松，但真正开始做的时候却漏洞百出，问题不断。认为事情很简单，很轻松，这可以看出是缺乏对事情复杂度的认知，心理上没有真人对待，并且对事情的完成程度要求不高。做的时候漏洞百出，问题不断，这可以看出是缺乏宏观看待问题，理性制定规划并执行的习惯。而这一点则是极其拉扯我精力的事情，看似事情是做了，但实际上完成程度极其差，自己不满意，别人不满意，同时也遗留下了诸多问题。
-花心
-	说到花心这个词，回顾了下这么多年的经历，在先前的两段经历中，即使有没有处理好关系的阶段，但也算是一心一意地对对方。和小宇接触以来，却迈出了不该迈出的一步。前后对比的差异，也使得我不得不好好想一想为什么会这个样子。浮躁，轻浮，不安全感，漂浮感，责任感，以及缺乏对自己的约束。之前的话是约束自己主观上屏蔽其他女生，而后来却虽然怀揣着不安和内疚，但依旧迈出了出轨的一步，有一部分是之前受挫，一部分是对未知的不确定感。这颗火苗曾燃起过，也成为了小宇对我失望，不信任的重要一点。
-自卑、自主
-	这是一个很奇怪的情况。从小到达的生活环境、学习环境按理说应该让我成为一个自信心极强的人，但实际上，却远远并非如此。大概是，从小到大，真正自己做决定事情太少了。就学习而言，大多数时候是按照老师要求一步一步来，几乎所有闲下来的时候用在了学习上，而对时间的安排，却几乎没有。能力不够，脑力不够，靠时间堆，靠体力堆，靠一股脑的毅力去堆。因为这些确实不需要太多思考，一心一意做好一件事情就好了，其他的事情是无关紧要的。正是这种长期的思维习惯，使得缺乏思考创新组织安排的能力。
-	也正是如此，使得一遇到自己要做决定，做安排的事情，我就变得特别被动，而不是一种跃跃欲试，积极勇敢去拼去闯的状态，也就是“怕事”。慢慢久了，这便变成了一种自卑。
-	进入大学之后，人生的分叉变得太多了，选择也太多了。但我还不具备在大学的海洋里畅游的能力。别人跃跃欲试地去探索新天地，而我却龟缩在学习的寸土里瑟瑟发抖。实际上是公平的，我也可以去自主地去探索新天地，但我却没有。
+
+把手抬上去，把视线放下来。
+眼高手低就是一种自身能力与憧憬不相符合的状态，要改变的话就是要让这两种东西达到相对的平衡。没有那个实力的时候就别幻想自己有哪些牛逼哄哄的成就，当然不是说你一声都不要想，你可以等你把能力提升上去在想啊。大部分人想的都挺美的，但是能力差啊，所以才会眼高手低。人家有能力的人想的也美啊，但是都不会说眼高手低，因为那是人家可以真正做到的事。不要幻想别人的高度你也可以轻松地达到，要努力！
+
+说到底就是不能清楚的认识到自身能力和现实的差距。改掉的话就是要养成从自己实际情况和客观条件出发制定目标和计划的习惯，慢慢地做一些实实在在的事，一个个小目标达成。人才会自信些，踏实些，才会有在平地上行走的感觉。那时候你的视线才会在正确的方向上。因为你不能总看天上啊，还得看前面的路。
+
+仰望星空与脚踏实地，只会仰望星空的人，只会迷失在星空中，失去自己。
+
+### 花心
+
+说到花心这个词，回顾了下这么多年的经历，在先前的两段经历中，即使有没有处理好关系的阶段，但也算是一心一意地对对方。和小宇接触以来，却迈出了不该迈出的一步。前后对比的差异，也使得我不得不好好想一想为什么会这个样子。浮躁，轻浮，不安全感，漂浮感，责任感，以及缺乏对自己的约束。之前的话是约束自己主观上屏蔽其他女生，而后来却虽然怀揣着不安和内疚，但依旧迈出了出轨的一步，有一部分是之前受挫，一部分是对未知的不确定感。这颗火苗曾燃起过，也成为了小宇对我失望，不信任的重要一点。
+
+### 自卑、自主
+
+这是一个很奇怪的情况。从小到达的生活环境、学习环境按理说应该让我成为一个自信心极强的人，但实际上，却远远并非如此。大概是，从小到大，真正自己做决定事情太少了。就学习而言，大多数时候是按照老师要求一步一步来，几乎所有闲下来的时候用在了学习上，而对时间的安排，却几乎没有。能力不够，脑力不够，靠时间堆，靠体力堆，靠一股脑的毅力去堆。因为这些确实不需要太多思考，一心一意做好一件事情就好了，其他的事情是无关紧要的。正是这种长期的思维习惯，使得缺乏思考创新组织安排的能力。
+也正是如此，使得一遇到自己要做决定，做安排的事情，我就变得特别被动，而不是一种跃跃欲试，积极勇敢去拼去闯的状态，也就是“怕事”。慢慢久了，这便变成了一种自卑。
+进入大学之后，人生的分叉变得太多了，选择也太多了。但我还不具备在大学的海洋里畅游的能力。别人跃跃欲试地去探索新天地，而我却龟缩在学习的寸土里瑟瑟发抖。实际上是公平的，我也可以去自主地去探索新天地，但我却没有。
+
+```
+克服自卑，重在一个字，“做”。
+
+你想做一件事，你去做了，然后你又做到了，你的信心就会增长一分；你又想去做一件事，你又去做了，然后你又做到了，你的自信就会又增长一分；人的自信，就是这样一分一分积累出来的。
+
+反过来，你想做一件事，你拖延了一下、犹豫了一下，最后你没去做，那么你的内心就会虚弱一分；
+
+你又想做一件事，又拖延犹豫了，最后还是没去做，你的内心就会又虚弱一分。
+
+人的自卑，就是这样一分一分喂养出来的。
+
+成功，才是成功之母；而失败，只会带来习惯性失败。
+
+想办法让成功变成一种习惯。
+
+让【相信自己可以做到】成为一种潜意识的惯性。
+
+让我们的身体进入【做事---完成---做事---完成】的循环里。
+
+当我们意识到自己某方面的自卑时，千万不要坐在原地自我否定自我怀疑，而要马上站起来，去做！
+
+马上把注意力拉到“做”的状态，而不要放在“想”的状态上。
+
+比如，有点朋友和我说，当我们对自己的外表感到自卑的时候，应该如何克服？
+
+遇到这种情况，我们可以马上问自己一个问题：“我能为我的外表做些什么？”
+我能做些什么？
+能做些什么？
+做些什么？
+做，什么？
+我可以管理我的饮食，减少脂肪摄入；
+我可以设置运动计划，每天定时锻炼；
+我可以查阅穿搭指南，想办法遮掩自己的身材劣势，突出身材优势；
+我可以研究明星的发型和妆容，找到适合自己的发型眉形口红颜色；
+。。。
+
+想好之后，马上去做。
+如此坚持一天，你感觉一下，自己的内在和外在有什么样的变化？
+如此坚持十天，你感觉一下，自己的内在和外在有什么样的变化？
+如此坚持一年，坚持五年，坚持十年，你试试吧，你绝对会成为一个对自己外表有着坚实自信的人。
+
+不需要成为第一名，你只需要成为更好版本的自己，就足以把别人甩开好几个身位了！
+
+你知道么？
+人的本性，其实是贪图舒服的，害怕麻烦点，畏惧风险的。
+大家都想减肥，但是，又有几个人能抵挡住美食的诱惑呢？
+大家都想考高分，但是，又有几个人能够耐下心来仔细思考一道难解的题目呢？
+
+别人吃夜宵的时候，你不吃，你的定力就增长一分，从此以后，你就不再是一个“无法抵挡夜宵诱惑的人”，而是一个“抵挡住眼前利益诱惑的人”。
+别人抄作业的时候，你不抄，你的思考能力就会增长一分。从此以后，你就不再是个“遇到困难就懒得想的人”，而是一个“有个能力解决问题的人”。
+别人选择在一个安稳的地方混日子的时候，你不混，你选择去追求自己真正擅长的事业，那么你的抗风险能力就会增长一分。从此以后，你就不再是一个“靠着大树混饭吃的人”，你自己就是大树。
+
+不糊弄，不偷懒，不走捷径，每一步都扎扎实实的去做了，你自然会一点一滴地增长内在力量。
+
+只有你踏踏实实的做过了，你才会清楚地知道自己的实力到了哪一步，这样你才不会轻易地受到别人评价的影响；
+
+只有你真真切切的做过了，你才会逐渐清晰自己内心真正想要的是什么，这样你才有胆量拒绝不适合自己的选项；
+
+只有你一点一滴地做过了，你才会把精力集中在实现目标的事情上，而不会陷入无休止的情绪内耗和自我挣扎。
+
+更重要的事，这世界上大部分人都是贪图舒服的，害怕麻烦的，畏惧风险的。这些劣根会导致他们始终停留在“想”的层面，而无法落实在“做”的层面上。
+
+别人不做，你去做，你就会成为价值稀缺的那一个，你的能量层次就会和别人拉开几个身位。
+
+所以，如果我们想要真正的克服自卑，就必须要去做。
+
+别光站在原地想，去做啊！去下功夫啊！
+
+嫌自己丑，那就去运动节食学搭配，就算最后成不了大美女大帅哥，至少也能成为一个有气质有魅力的人；
+
+嫌自己笨，那就去学习聪明人的思考方法，去老老实实地看书记笔记，就算最后成不了思想家，至少也能成为一个独当一面解决问题的人；
+
+嫌自己没本事，那就从零开始学习一门技能，学到能够自立门户接活的成都，就算最后不一定出大名挣大钱，至少也能成为一个自食其力经济宽裕的人。
+
+自信不是“想”出来的，而是“做”出来的。
+
+“想”不会令你舒服，只有“做”才会令你舒服。
+
+生命在于行动，如果一个人连行动的权利都要放弃掉，那这样或者还不如去死。
+
+就算我们去年蹉跎了，前天拖延了，昨天浪费了，又如何？
+
+我就从今天，现在，开始做！
+
+我什么都不是，我就是一张白纸，我就从现在就开始写第一个笔画。
+
+今天开始，总比明天开始要早一天；今年开始，总比明年开始要早一年。
+
+只要我们还在做，一切就都还有翻盘的可能。
+
+最后送给大家一句金庸老爷子的话：当你受到委屈和打击的时候，别害怕，别难过，自己努力就行了。
+```
+### 缺乏信仰
+
+这个问题之前小宇和我说过。第一点表现为对自己认知不足，第二点表现为对很多事情缺乏坚定的信仰，第三点表现为缺乏主观能动性和毅力。高中阶段尚还可以，毕竟目标单一，外在和内在对我的要求是一致的，只有学习。因而信仰可以一切为了学习。但隐藏的问题是，学习之后呢？进入大学之后，自己的下一步在哪？这个问题似乎从没考虑过。包括本科临近毕业，包括保研，都是如此。不知道自己需要什么，也没有定下一个方向义无反顾去做的勇气。其二，因为缺乏坚定的信仰，在科研上也缺乏钻研与专注。事情真的是这样么？按照步骤做，结果能完全正确么？对于不理解的东西，习惯性归结于外因，噪声、干扰什么的，而不是坚信这东西能得到很好的解决，从而导致做过之后也不知道自己做的是否靠谱，缺乏底气。其三，因为不知道自己想要什么，仿佛很多时候做事时是完成任务，而缺乏热情。这种就表现为状态的不稳定。有时候工作进入状态的时候，能够废寝忘食，但有时候也会迷失，不知道自己该去做什么。
+
+信仰，无非是去无条件地去信任一些东西。而我却不知什么时候开始怀疑因果律。从起点到终点，必然有一条路径能够到达，只要按照这条路去走，必然能够到达，但我却始终不能确信这条路能走通。这是一种很奇怪的逻辑。
+```
+信仰，信而仰靠之，也许是一种原则，遵循它去做事，你知道不论现在多么迷惑，最终自己不会后悔。
+
+如果能通过对经验对其不假思索的相信，要做到知行合一，可称之为信仰坚定。但是这与未经印证，仅仅随大流地盲信，是不同的境界。这就好比看山还是山和看山只是山的区别。
+
+完美的信仰，是一套自洽的体系，依靠他你可以解释任何问题，运用它你可以得到心满意足的结果。
+
+常识可以说是一种信仰，每天吃饭穿衣刷牙洗脸等，你会去质疑么？会做的不坚定么？
+
+在碰到未知，迷茫的时候，我们的自我体系失效了，才会去依靠更高级的体系来支撑自己免于恐惧，获得希望。
+
+有人信仰实验科学，因为实验验证了既有案例，也解决了大部分问题，但仍有可能对尚未验证的领域存在猜测和错误，比如经典力学和量子力学。
+
+也有人信仰宗教，或者因为自悟，或者因为有缘人相助，使他们意识到，如此这般地去行事，会让自己不后悔。
+
+无论做什么事，坚定信念，坚持信仰总是没错的，这样才能克服经常性的迷茫，不知所措，减少内耗。
+```
+
+### 缺乏斗志与活力
+
+记得小宇说过，从我的眼神中看到了迷茫，像行尸走肉一般不知道自己是谁，在哪，要去做什么。不服输，不怕困难，敢拼敢闯，敢和困难掰手腕。有时候我也感觉，我的状态像个老年人一样，缺乏活力，缺乏精气神。佛系这个词真可怕，在还没有拼尽全力去努力的时候，就开始佛系，去看淡一些东西，去辩证地看得失，实在是空中楼阁，空谈理论了。
+
+```
+迷茫的原因大致分为以下6点：
+1. 对自己的专业不感兴趣或者看不到工作前景、每天的工作很忙碌却看不到自己的提升，收入满足不了支出，所以不甘心浑浑噩噩地工作下去，然而辞职却不知道自己真正想要什么、能干什么，适合做什么，能有哪些职业选择。
+2. 在工作生活中因为各种原因失去了目标或者找不到目标，不知道下步该怎么走。
+3. 由于未来的不确定性，一直在安逸中空想，在安逸中停滞不前。自己而不敢去实践、不敢去选择，导致梦想和能力不匹配，感到自己无能。
+4. 不满足现状，想去改变，怕承担风险、怕失败、不敢接受失败。
+5. 在实践自己想法的过程中，因急于求成，在自己预想期内没看到成绩就在中途放弃、自我否定，而找不到方向，在自我认为的失败中沉沦。
+6. 在本我和超我中找不到自我。（超我是奋进，有责任心，拼命工作，但是很少享受；本我是贪图享受、安逸，活在当下；自我介于超我和本我之间）
+迷茫的时候最建议做的7点：
+1. 读书（活到老，学到老）
+读书分为两种，经典书籍，碎片化阅读和提升自己的书籍。
+2. 锻炼身体
+经常锻炼的人很有活力，有好的精神面貌，有更多的精力去做事，有身体去接受更大的挑战。
+3. 旅游（世界那么大，出去走一走）
+4. 平静的独处
+平静独处是为了让超我和本我在自己的精神结构发生冲突，在冲突中去和解找到自我。有时候不做什么比做什么重要。适当地平静独处，可以更好的审视自己的内心，更好地复盘自己的想法。平静独处后就得去实践自己的想法，空想永远不会让人找到方向，只会让你变得焦虑。
+
+“在这个吵得人分不清楚东西南北的世界里，我们手里所持有的干干净净的初衷，不多了。握好了，别丢了。明天还要赶很远的路。”
+```
+### 懒惰
+
+印象中，我不算是一个懒惰的人。懒惰的成因在于缺乏动力，生活中缺乏积极的反馈。当做事缺乏了意义，也就缺乏了为之努力，去做好的动力。当目标不清晰的时候，缺乏条理的时候，懒惰也就很自然地出现了。因为一片混沌，所以在混沌之中想要把事情做好，太难了。想要解决这个问题，还是先要梳理好这混沌的一切。
+
+```
+每当你稍微感觉自己有点懒惰的时候，想都不要想地放下当下手里所有的事，立刻开始做你最不想做却不得不做的那件事。
+
+比如你此正在网上看视频，心里刚刚开始后悔浪费了一上午的时间没有做科研，这时你应该立刻关掉视频网页，打开Google Scholar随便找一篇领域内最新的文章开始读，一句一句地读，不一会儿就进入状态了；
+
+比如你早上睁开眼舍不得温暖的被窝，但是昨晚计划今天要去健身，这时你应该马上跳下床，穿衣服，挤牙膏，打开冰箱热早餐，做完这一切你就不会想回到被窝了。
+
+再比如周五要开组会作报告，而现在是慵懒的周二下午。你还在想要不要拖两天再做presentation，这时你应该立刻打开电脑，新建pptx文档，搜集资料，攥写文本，写着写着就写完了。
+
+生活中这样的动作重复多了自然会形成条件反射，有重要的事情都会立刻完成。拖延症很多人都有，但这不是你懒惰的借口，这病是可以100%治愈的。我认识所有优秀的人，没有一个有拖延症，哪怕一丁点都没有！因为这就叫执行力。
+
+我提供的方法最核心的点在于：
+1. 少有懒惰的萌芽就要立刻放下当下手里的任何事（视频，音乐，社交软件，被窝等等）
+2. 这个过程中脑袋里什么都不要想。因为我们生活中绝大部分需要完成的事情，其中80%的精力都消耗在启动这个环节。所以当你用一种势不可挡的态度在极短的时间内完成了这80%，剩下20%靠惯性就可以了。
+
+永远永远都不要说我从下个礼拜/明天/一小时以后/半小时之后/二十分钟之后/十分钟之后/五分钟以后再开始，就是现在这一秒！我这个方法有个binus，就是很刺激。你想像一下上一秒还在娱乐懒惰这一秒就开始做正经事，这种突如其来的角色反差造成的心灵冲击力足以让你脱胎换骨，等你什么时候习惯这种反差了，你的拖延症也就治好了。
+
+其实用我的方法不一定能让你高质量地完成所有事，但最珍贵的是通过这样的训练让你养成了一个一直在做优先级最高的事情的习惯。无论你未来励志做科学家，CEO，还是国家主席，养成这个习惯都是你的入门课。
+
+克服惰性的的技巧：
+1. 首先给自己一个足以激励你，并且容易实现的短期目标（个人认为，短期目标比长期目标更有效，长期目标往往容易带来短期拖延）
+2. 在惰性来袭的时候，先把一条腿迈出去（比如当你在打个盹和去写论文之间犹豫的时候，你可以先拿起笔，写上一行）
+
+甚至后来我开始刻意地惰性作对。比如在寒冷的早晨，我会在想赖床之前，跳下床去洗漱。
+比如在工作堆积如山，但困意来袭的时候，去踩一阵儿跑步机
+
+如果你把惰性当作一个人，而非一种情绪，那么问题就变得简单了。
+甚至当你每次把“惰性”击倒在地的时候，总是可以得到一点小小的成就感。
+
+最后补充一点，充足的睡眠，健康的饮食，可以让你得到精力充沛的一天，也有助于抵抗惰性。如果你因为熬夜而一天无精打采，我建议你去睡觉。强烈不建议和生理层面的需求作对，身体对于睡眠，食物的需求，通常和懒惰无关。
+```
+
+### 缺乏逻辑
+
+说起这一点，其实有些讽刺。一个学物理的，居然缺乏逻辑思维。但事实上，似乎如此。认知一件事缺乏合理的步骤，常常陷入局部不能自拔，而缺乏宏观的认知。安排生活上，既没有把事情记在本子上，按部就班地去做，也没有记在心里，不骄不躁，有条不紊地去做。大多数时候，是心里忐忑不安的状态，觉得自己没有把事情做完，把事情做好。
+
+```
+提升逻辑思维能力，需要具备：
+1. 逻辑思维的起点是系统化和体系化的知识。没有系统化和体系化的知识，你就无法 做到思考，充其量是胡思乱想，更不要说逻辑思维了。别忘记了，所有的思考都是建立在系统化和体系化的知识基础上。
+2. 结构化思维是你逻辑思维形成的标志。有了系统化和体系化的知识体系外，你必须具备结构化的思维模式。所谓结构化是指一个人面对工作任务或者难题时能从多个侧面进行思考，深刻分析导致问题出现的原因，系统定制行动方案，并采用恰当的方法，确保工作得以高效施展，取得高绩效。
+3. 学会分析问题和解决问题是你逻辑思维成熟的应用
+一些职场人遇到问题，不是先分析问题是否成立，而是直接否定或肯定。当你问他为什么如此肯定，他却根本说不出自己得出结论的原因和依据。
+不管遇到什么，不要惊慌失措，更不要急于置身事外，而是要做到冷静、冷静再冷静，理清事情的前因后果：
+首先，找到问题产生的原因。其次，分析结果产生的原因。最后，如果事态对自己有利，那么在以后的工作中如何更好的应用；如果事态对自己不利，那么以后又如何避免损失和规避风险等。
+按照这个方式不断训练自己，你会发现，一旦这种思维方式形成，会让你终身受益。所以，分析问题和解决问题是你逻辑思维成熟的应用。
+
+逻辑思维能力是一种及其重要的能力，也是一种思考的工具。想要提高这种能力，没有速成班，关键是平时多练习和应用，对遇到的人、事及难题，多做分析，不要先入为主、更不要想当然。
+```
+
+### 不诚实
+
+对自己不诚实，对别人也不诚实。怕别人觉得自己做的差，因而告诉别人自己其实做好了。不能堂堂正正地去认识自己的不足，并积极改正。其实事情本身没有那么糟糕，反而因为自己的不诚实，导致自己拖沓、心虚、不安、焦虑，也导致别人对自己的信赖和信心逐步丧失。
+
+到底是什么在束缚我的手脚？这种感觉真的很难受。堂堂正正做人，踏踏实实做事。心安做事，应急不方。
+
+如何做到对自己诚实，遵从本心，不自欺，不做作？
+
+```
+做到两点即可。
+
+第一，愿意付出坚持自己的想法所要承担的代价，愿意忍受不做作、不自欺所要承受的损失。
+第二，能够经得住那些超过自己能力和需求的诱惑。
+
+从生活中的每一个小事开始诚实的面对每一个人，最终诚实的面对自己。
+慢慢地你会发现，把所有的包装退去之后，脑子里剩下的年头就代表着真实的你自己。
+你会承认，你喜欢那个女孩只是因为她长得好看。
+你会承认，你不喜欢那个同事是因为他学历比你高。
+你会承认，你看知乎只是为了精神慰藉。
+你会承认，你真的很喜欢钱。
+。。。
+
+刚开始的时候真的很难，人总是会不由自主的为自己找借口，撒个小慌。今天真的有点不舒服所以不陪你看电影了么么哒，这种借口和谎话都是随口就说出来的。时间长了，欺骗的自己都相信了，其实是真的爱她的才华，其实讨厌那个同事是因为他人品不怎么样，其实看知乎是为了提升自己。
+
+最后发现你的念头有很多三观不正的，猥琐的，肮脏的，妒忌的，虚荣的。
+
+那又怎样，事实不一定是美的。
+
+人生苦难重重。
+
+这是一个伟大的真理，是世界上最伟大的真理之一。它的伟大，在于我们一旦想通了它，就能实现人生的超越。只要我们真正理解并接受这一点，那么我们就再也不会对人生的苦难耿耿于怀了。
+```
+
+## 公主与骑士
+### 公主篇
+(这部分尝试从小宇的角度思考，部分或许有偏差，指正后再做修改)
+
+#### 不怕你傻，怕你当我傻
+有句话说的好，解释就是掩饰。尽管这句话不适用于所有的情形，但也有些道理的。做事做不好很正常，每个人情况不同，认知能力不同，做事、思考问题的方式和逻辑也不同。没有什么事情不可以拿到堂面上说。通过沟通交流，思维的摩擦碰撞，问题自然在这个过程中得到了解决。你的不好，我其实都知道。但既然我选择了你，就意味着这些并没有那么重要，我希望看到你的进步，成长，这样就够了。而不是止步在当下，尽管可能主观上并没有欺骗的本意，但事实上，这就是欺骗，我不需要一个虚假，夸大的，带光环的你，一个真实的，愿意去进步的你，就足够了。所以，不怕你做不好，怕你做不好还要装作做好来糊弄我。你要明白，这不是善意的欺骗，这是恶意的隐瞒。
+
+理解：没有人是傻子，只是感情中你愿意傻傻的。但我却不能堂而皇之地当你傻。当你再也不想装傻的时候，装作看不到的时候，也是你不再在意的时候。有时候你不说，只是希望我自己能懂。你想让我带着你，而不是你告诉我该怎么做。与其我心虚地营造”善意虚假的温馨”，不如大大方方的说，我可能没做好，你说说哪里做的不好，我看看怎么改正，做的更好。
+
+怎么做：不怕在你面前出糗，落落大方，堂堂正正，干脆利落点。
+
+#### 和你相处，我不想当侦探
+不要等到什么事待我去发现，你才告诉我。我不想和你相处的时候，费心费神地去想你在做什么，你最近做了什么，有什么做什么不该做的事。不要让我变成一个聪明的人，敏感的人。人在做，天在看。我不想盯着你，有什么事告诉我。不要做坏事。
+
+理解：感情中默契很重要，有些话不需要说，我就知道你在想什么。这种状态真的很好。而我之前的所作所为打破了这种默契，这种信任。这种默契需要慢慢去修复。
+
+怎么做：主动和你说我生活的日常，各种有趣的事，让你了解我每天都在做什么。
+
+
+#### 努力不需要让我知道，我感觉的到
+有些事情你做了，无论做的好或不好，其实我都会挺开心，因为你做了。但你刻意地让我看到，只能让我理解为，你在讨好我，忽悠我，敷衍我。你做好你的事，做好咱们的事，不需要让我看到。过程没那么重要，结果更重要。你把事情做好，我会更开心。生活不是舞台，你不需要让别人知道你做了什么。你把事情做好，提高的是我们的生活质量，实实在在的，不光鲜也不浮夸。
+
+理解：生活是平平淡淡的，就只有我们两个看到，也只有我们两个经历，因而朴实，真实就是我们生活的节奏。我所做的一切，不是为了讨你欢心，而是为了我们更好的生活，提高我们的生活质量。这不是短期的任务，这是我们长久的生活。你就是我的，跑不掉的。
+
+怎么做：放平自己的心态，承担起照顾者的角色，而不是学生的角色。我不需要炫耀我完成的多好，因为我是照顾你的，我理当完成的很好。若是没完成好，那是我做的不足够。
+
+#### 当没有信仰的时候，我是你的信仰
+当你迷茫时，不知道为什么努力时，没有信仰时，可以把我当做你的信仰。以后的日子都是我在陪着你，为了以后咱们更好地生活，现在就该好好做事，好好对我啊。生活本来就没那么多条条框框，你也不需要和别人去比什么。家，不就是最好的信仰么？
+
+理解：信仰不必是什么高大上的东西，但它也是最持久，可以贯穿一生的东西。为生活，为家，为自己，为爱人，可以说是最朴实的信仰了。想想，似乎本应该就如此。这是最实际，也最贴切，最真实的事情了。
+
+怎么做：每天看看这篇文章，多看一些关于家庭的文章，不断强化家的信仰。
+
+#### 家不是讲道理的地方
+
+咱们相处，和你与同学相处与朋友相处不一样。在家里，对错真的不那么重要。做事对错很重要，这能提高咱们做事的能力，但咱们相处，不需要把道理讲清楚，谁对谁错梳理明白。家是温暖的，而不是冰冷的。做事我希望你能引领我，但你不要斥责我。
+
+理解: 如果争论是为了更好地解决问题，让双方都受益，当然是没什么问题的。但若是只是为了一较高低，挣个胜负，输出价值观，夹带情绪私货，那本大可不必。我们是一个整体，没必要争个对错，因为这些本来就无关紧要。家不是讲道理的地方，即使讲，也要温柔一点，和善一点，照顾好你的感受，用你易于接受的方式来讲。
+
+怎么做：讨论问题的时候，想想，讨论问题的目的何在？
+
+#### 我不需要你告诉我对错，你应该相信我知道该怎么做
+做错了事，事情没做好，有漏洞，不用你说，我也知道我自己做的不对。咱们的首要角色是最亲密的人，其次才是生活的伙伴。照顾好我的情绪，考虑到我当下的状态，这很重要，这很重要。其次，你要相信我，我能把事情做好。无条件信赖。
+
+理解：人总有自知，自己是最了解自己的人。你做事没做好的时候，心里肯定是最清楚的，心中也会有愧疚有压力。这时候承担的应该后坚实的后盾这个角色，而不是审判者，批判者。我应当站在你身前鼓励，而不是站在你身前拿着小皮鞭鞭策。我理当信任你能把事情做好，无论什么时候，不需要什么条件。
+
+怎么做：做身前鼓舞你的人，相信你能做好一些，永远。
+
+#### 不要让我理性，我的理性只用在工作上 
+我只想工作的时候理性，但不要让我一直都理性，真要理性的话，你是适合我的人么？我只想在你面前做个小孩子呀。你疼我，照顾好我就好了。如果你有些还做不到、做不好，我能理解，那你就赶快去做到啊。
+
+理解：感情本身就是感性的东西，感情中谈理性，讲道理，本身就是把感情推向更远。感情本身就是一种感觉，照顾好你的感受，体谅你的辛苦，知冷热，知苦甜就足够了。
+
+怎么做：多想想你需要的是什么
+
+#### 需要什么你和我说，不开心要让我知道
+你需要什么，其实可以和我说的。谁都有困难，都有情绪，都有不开心。这些消极的情绪，最终肯定会通过某种途径释放。与其悄无声息的释放，与其将之散发到生活各处，为何不和我说呢？你要相信，我不怕你的消极情绪，我是你最亲近的人呀，你可以和我说的。我能处理好的，不用担心受你负面情绪的影响。
+
+理解：两个人相处自然很重要，双方都找到自己最舒服的状态，让自己舒服，让对方也舒服。你我都是彼此的心灵港湾，是把心存放的地方。因而，心里有什么，说出来就可以了。开心和你分享，不开心和你倾诉。
+
+怎么做：经常分享自己的心情，状态。遇到烦心事多多沟通交流。
+
+
+#### 现在的相处，就是以后的相处
+现在即是未来的缩影。现在我们生活中的相处模式，决定了未来我们如何相处。所以，从现在起，你需要认真地思考，我们应该怎么相处。该去改正的地方，现在就要去改正。不仅仅是为我，也是为你，为咱们。我现在可以接受你的不好，但我很期待你能改好。我不想未来你还是这样。
+
+理解：很多事情是不能等，不能拖的。一等一拖，就什么都没有了。能当下做好的，做到的，就不要等到以后在做。和你相处也是一样，时间很少，也很短。不能老让你来催着我去做事，去做好自己，我应当自己主动把事情做好。包括工作也是一样，能现在去做的，就现在去做。
+
+怎么做：提升行动力，有条件的情况下，能立刻去完成的事情就立刻去做。
+
+#### 我需要你来引领我成长
+我期待你是一个引领者的角色，带着我长大。包容我的不足，引导我一步步地去进步。我在你的肩膀下遮风避雨，在你的指引下扬帆起航。我希望成为一个优秀的人，一个对未来充满期望的人。你应当让我对未来充满希望。我希望你在我心中是一个伟岸的人。
+
+理解：凡事要往未来看，要从长久的角度思考。我和你的未来不是当下，需要我逐步曾担起责任。很多事应该提前去想，提取做好准备，而不是埋着头只看眼前一步路。我需要先一步往前探路，往前看一看。
+
+怎么做：立足点高一点、远一点。勇敢一点往外探，去尝试，去体验。有耐心地去引导、去带领你去成长，去进步。
+
+
+#### 对我温柔点，我只想当你的宝宝
+每次你吵我的时候，我真的很难过。你要懂男女生是不一样的。你吵我，我会感觉对错比我重要，你没那么喜欢我，对我有意见，所以会不顾我的情绪。你真的要对我好一点，对我温柔一点，我需要的是一个会疼我的你，而不是一个只会释放自己情绪还打着为我好的名义的你。
+
+理解：处理情侣关系不同于同学、朋友、同事的关系，情侣间相处，人为第一，事为第二。把人事的顺序颠倒了，不仅会消磨双方的积极性、也会带来诸多的不理解。就如先前和你讨论问题，你和我说了好多次，“对我温柔点”。尽管经常我会说就事论事，不要带着情绪，但实际上，我说话的语气和方式必然会让你很难过，很失望。先照顾好你，你能处理好事情的。
+
+怎么做：相信支持你能把事情做好。遇到问题，先关注你本身，至于事情什么的，不是很重要。
+
+
+#### 说到就要做到
+每次你说的时候，我都很开心，但当你没做到的时候，我会很难过，很伤心。这可能是你的习惯，是你粗心，但我慢慢就不敢去相信你的话了。我是不想重翻旧事，但你要知道很多事情是我控制不住的，换做是你，你大概也是会如此吧。我愿意去相信你呀。
+
+理解：到现在，信任这个词在我身上已经消耗了太多了。习惯性地说的多，做的少，使得你不敢轻易地相信我的话。守信用、重承诺，这是我真的该好好学会的。
+
+怎么做：说话之前先想下这句话的分量。能不能做到，怎么样能做到，遇到困难怎么处理。不能为了说而说，要认真的去做。
+
+
+### 骑士篇
+
+#### 倾听，分享同理心
+如何公务员备考、比如之前工作中遇到的烦心事，实际上能帮到的忙很有限，你说这些问题的时候，尽管有时候是想得到建议、指导，但更多的时候应该是寻求安慰和倾听。这种情况下应该做到：认真倾听，并给予反馈；给予鼓励和建议，但注意分寸，避免登堂入室，反客为主，对自己的观点滔滔不绝，而是多观察你的反馈。用引导的方式来疏通情绪。多用，是不是呀，你觉得对不对？如果我是你的话，我可能会怎么怎么样？这样你觉得你可以接受么？多用鼓励的方式，而非逼迫施加压力的方式。
+
+抱怨，很多时候就是为了发泄情绪而已。发泄完了，对于聪明而又积极向上的你，自然会去做该做的事情。我需要做一个理智积极的伴侣。如果不如此，反而是和你一起抱怨，一起消极，那生活只会暗淡无光，我们也走不远。
+
+#### 重在行动 
+感情不能只停留在嘴上，若只说不做，就靠不住。
+- 容易被蚊虫叮咬，出门前嘱咐或自己带上花露水
+- 出门有事情要办，提前去踩踩点，搞清楚路线图，定好时间表。
+- 出去玩先定好酒店，带好配套的东西。
+- 积极参与她的生活，帮助她去尽可能地达成，成为她可靠的伴侣。
+- 天凉时多带一件外套，带上成包的餐巾纸
+- 出差的时候提前告知自己的行程。
+
+做事情不容易，所以不要把“你的事情”就丢给你办。我们一起做好，这是我们共同的经历，在这个过程中不断了解各自的特点，长处，优势互补，也有助于相处的融洽。
+
+谈恋爱是相互影响的过程。一个女生变得很积极阳光快乐，是因为男朋友给她这样的力量。好的恋爱，两个人都变得更好更快乐。
+
+#### 享受对你好的过程。
+把你当成未来的女儿来疼，这是最重要的。假如你说饿了，就去带你去吃好吃的，这是不够的，而应该猜到你可能会饿，提前看好要去吃什么，然后去准备好出发，带你去吃。不要为了体贴而体贴，应该享受对你好的过程。
+
+#### 有原则的照顾
+- 最好的照顾，不是言听计从，百依百顺，而是有态度，有原则的照顾。硬气一点，有态度，有原则，不能两个人都想去做什么就做什么，这样理性的守护，会给予安全感。
+
+#### 先照顾自己
+先学会照顾好自己，把自己的卫生、形象、学习、工作照顾好，才可能把你照顾好。
+
+#### 多学会笑
+学学怎么温柔地笑，保持乐观开朗的形象。在生活中保持微笑的状态，久而久之，不论是对我自己，还是对你，或是对生活都是积极乐观的状态。
+
+#### 挺直腰杆大步走路
+走路的时候抬头挺胸，拒绝驼背含胸，不要玩手机。控制好自己的步伐，稳重而非浮夸。
+
+#### 说话稳重
+拒绝脏话，温柔而不娘。没事的时候多看看文学书，提升自己素养。
+
+#### 充实自己
+无趣的人会让生活也变得无趣，多看看书，多学习，经常和你探讨有趣的事，不断提升自己。物质上的照顾是时间问题，精神上的理解与共鸣才是最大的照顾。
+
+#### 最需要你的时候总会到来，而平常时候你就是隐藏在心里
+当我非常需要你的时候，你不在，
+那么从今往后，你也没有必要在了。
+原本两个人在一起，要的只是一份陪伴，
+一份在乎，一份关心，
+一份安慰，一份守护。
+可是当在我最需要你的时候，你却每次都不能在我身边；
+陪伴我，给我温暖，给我关心，
+让我感到你有多在乎我，关切的问我遇到了什么困难，
+那我干什么还要你留在我身边呢？
+其实最美好的爱，并不是你能给我很多很多的钱，
+也不是你给我很多很多的甜言蜜语山盟海誓，
+我要的只是你能在我无助的时候立刻出现在我的眼前，
+让我的心能够被温暖融化，不再惧怕任何风雨。
+爱情不单只是锦上添花那么的简单，
+还要在危难之际懂得伸出温暖的援手，雪中送炭。
+但如果这一份爱，只有锦上添花，根本不能雪中送炭，
+你又拿什么来证明这份对我的爱？根本就无法证明。
+当我在需要的时候，
+你若果不在，只有我一个人去扛所有的心酸委屈，独自流泪，
+待到日后我顺利渡过了难关，你真的没有必要再出现了。
+这个世界的风雨时刻都不会停息，一个人独自面对总是会觉得辛苦，
+都会想要有一个人一起共度风雨。
+想要有一个人在自己难过的时候可以给一个温暖的肩膀，
+都希望在脆弱的时候能有一个温暖的抱抱。
+每个人都会经历一段埋藏在心底的难熬日子，
+所以才更加懂得夜晚的孤单，
+更加用心地珍惜有人陪伴的幸福。
+虽然所有人都能够分享你的开心，
+却不是所有人都愿意陪伴和分担你的伤心。
+所有的人都有软弱的时候，
+这个时候希望有个人能够陪伴在你的左右，
+一起做一些毫无意义的事情也毫无关系，
+心照样感到温暖，感情也会得到安慰。
+如果我需要的时候你都在，那该有多好。
+一个拥抱，胜过千言万语；一杯热茶，低过百句承诺。我想要的爱，就是在我需要的时候，你都在。
+#### 希望我拿主意的时候，“都行”和“随便”从字典里面删掉
+都行、随意、你选就好。既然如此，我又为何来问你？来征求你的意见？若是忙，大可以说我现在有点事，回头再看。若是不了解，大可以去了解一下，毕竟以后这么多年，早晚都要去了解，而且参与另一半的生活，是多么有意义的事情啊！
+#### 不要逼着你认错
+
+#### 吵架解决的是谁更爱对方的问题，不是谁对谁错的问题
+爱就是爱全部，包容不足，并引导去改正。首先想到的应该是“你怎么样了”，而不是“我怎么样了”。对错不是关注的重心，而是你怎么看对错。
+#### 少问为什么和凭什么，你是她男朋友这个理由能回答绝大多数为什么和凭什么
+作为男朋友，自然要有男朋友的担当，不然对方为何来去选你。如果事事都要寻求“公平”的对待，她完全自己可以照顾好自己的。很多事情不是她不能做，只是因为她想要感受你的爱意。而爱意的最直接体现，就是心思在她这里，希望一如地对她温柔。一如地，眼中有光，心中有爱。
+#### 每个女生都是天使，当她爱上你，就不得不放弃翅膀来找你，但当你离开她，她却没有翅膀回到以前的天空了
+和小宇相处的过程中，她为我退让了很多，一次次地宽容我，原谅我。她哭过的那几回，心痛的不行。
+#### 你说的话不能完全按照着做，得换个角度思考
+相处中要把握主动权，知道小宇想要什么，我怎么去做好，而不是一味的盲目的去做。
+#### 你喜欢我来帮你做决定
+小宇也是个小女孩，希望我是一个坚实的臂膀，是一颗大树，来保护她，为她遮风挡雨。遇到问题时，我能站出来，面临选择时，我可以帮她拿主义。我要发挥自己的主观能动性。
+#### 永远不要在公众场合对你呼呼吼吼又或是撇下你一人。
+不仅仅是面子的问题，更是对她在不在乎的问题。而且这种情形会在脑海中留下深刻印象，影响亲密关系的建立和发展。
+#### 两个人都有发火的权利，但不能同一天，如果那一天你发火了，我就不可以发火了。
+发火是情绪的宣泄，但不应该成为火药桶的引线。一方发火，另一方应该充当灭火队员，积极引导。
+#### 你生活中不顺心，我要循循善诱、帮忙分析，提出建设性方案若干。
+生活中不顺心的事太正常了，太多了，我应该成为那个拉着你手向前走的人，而不是那个把你推开，在一旁观望的人。
+#### 与你吵架每次陈述不能超过3分钟，音量不能很高。
+要好好学会倾听，学会尊重对方，注意自身形象。
+
+#### 成为一个积极乐观的人
+
+霍弗在《狂热分子》中说过：“哪怕是在合理悲愤的情况下，恨意仍然不是来自别人的伤害，而是自己的无知和懦弱，换而言之是源于自卑”。
+多听听内心的声音，去自审，去感受自我的审判，这需要勇气，也需要一点毅力，把你从热闹非凡的现实诱惑中抽离。
+
+积极乐观的人不是没有如实地看到困境才会乐观的，而是他们相信：无论现状是什么样子，事情总会朝着好一些的方向转变。
+
+积极、乐观的人最根本的特点，是能看到事情的转机。他们认为自己可以对周围的人或事物产生影响，而不是完全被现实或命运等不可抗力吞噬。面困困境，乐观者相信自己可以通过努力，让情况至少比现状更好。
+
+相比之下，悲观者往往急于下结论---这件事就这样了，这个人（多数情况下是自己，但也可能是他人）也就如此了。过早人为定性，其实是在剥夺出现转机的机会。
+
+人生态度积极、乐观的人不会被一次失败或错误击倒---他们会留出改变的空间，并为了收获更好的结果付出努力。从心理学的角度分析，这是一种高自我效能的体现：我相信自己有足够的能力创造改变。
+
+- 低自我效能的人在着手解决问题前，往往会在脑海中预言千万种失败的可能性。而低自我效能常常是伴随着低心理韧性的：一个假想中失败的可能性，都足以让他们踌躇不前，越想越害怕，越琢磨越无法真正下手---永远有解决不完的问题，我做出尝试又如何？这早就超出了我的能力范围，不过是徒劳罢了。一旦实操真的失败，他们会立刻合理化自己的失误：我本来就做不好嘛，失败了才正常。
+
+- 为了培养、提高自我效能，我们要反其道而行之：在脑海中预演多种成功的可能性，客观分析成功的必要因素，在解决问题的途中可能会遇到哪些问题，针对每个问题又有哪些解决方案... 我们要接受的，是每个人都需要做准备，以及每个解决方案都不可能简单地一步到位。我们要习惯提前演练，认识自己的能力，并接受自己的考虑可能不是100%周到。
+
+- 对习惯了做充足准备与演练的人来说，解决问题时没能一次成功，意味着准备做的不够周全，还有进步空间，而不意味着自己有缺陷，对现状无能为例。这种对失败的归因方式被称为成长型思维模式。对积极乐观、自我效能高的人来说，凡人凡事都有进步的空间，而失败恰恰帮他们指出了这片区域。
+
+保持积极并不意味着你要一直快乐，而是说即使在最艰难的日子，你也要相信会有变好的那一天。
+
+#### 成为一个有担当的人
+1. 谨言慎行，不要高估自己的能力，不要浪费他人的信任，抓住每一个机会，说到做到。
+2. 把自己的每一个角色扮演好
+    - 该当丈夫的时候是丈夫，给予伴侣必要的扶持与帮助，宽慰、体贴
+    - 该当儿子的时候是儿子，尊重供养老人，关心他们的健康，帮助他们，爱他们
+    - 该当爸爸的时候是爸爸，爱护孩子，悉心教育，给予物质与心理的陪伴与关怀
+    - 该是男朋友的时候也是男朋友，对于还不能负担的责任，就不要先履行义务
+    - 该是领导/下属/组员/队长...的时候，做好手中的事，沟通好合作的人。
+    。。。
+    也就是做好每一个角色份内的事，如果不然，这些角色一旦错位
+    - 该当丈夫的时候成了儿子，就是妈宝，巨婴
+    - 该当爸爸的时候做了领导，就是一言堂而执拗的父亲
+    该做自己的时候，做自己，对自己负责任。成为自己的担当，而后方能对他人负责任。
+3. 担当就是有责任心，把自己该做的事情做好，并对之负责。
+4. 担当就是重承诺，对于自己承诺过的事要履行。
+5. 担当就是懂得爱，懂得家人的爱，懂得社会的爱，懂得祖国的爱。
+6. 追求自我价值的实现，而不是一味虚度光阴。
+7. 做任何事情，想清楚，做完不后悔，就算后悔也要担当的起并做完这件事情的后果。
+
+#### 成为成熟稳重的人
+成熟是一种能力，一种通晓规律从而解决问题的能力。
+1. 注意细节。一个成熟的男人也可以卖萌，也可以撒娇，也可以犯错。但他知道在什么时候去做这些事情。
+    - 指甲剪了没
+    - 每天洗澡了没
+    - 吃完饭有没有注意口腔卫生
+    - 进门是不是给女生开门
+    - 说话是不是注意措辞
+    - 有没有抖脚的坏习惯
+    - 说话的时候是不是面带微笑看着对方
+    - 在公共场合有没有大声喧哗
+    - 能不能化解两人之间的矛盾
+    - 有没有看书的习惯
+    - 是否按时睡觉
+    - 答应本人的事是否能做到
+    - 是否注意锻炼身体
+    - 语气语调是否过高或者过低
+    你要学，要去做的事情太多太多，为何要去表现自己成熟有担当？
+    成熟有担当是一个评价，当你为一个评价而去做的时候，你已经落了下乘，作为一个成年人，被女孩子一句话就影响了，也是不应该的。
+    做你自己吧，让自己成为一个有教养，有思想的人。
+    当你能做到这些的时候，自然就会有担当。学会负责不是从做大事开始的，而是生活的点点滴滴。
+    成长成熟是每个人都必经之路，而你定的目标，仅仅只是让你女朋友觉得自己成熟，未免太低。你应该有自己的想法，然后去执行，这样才能有自己的思想，才能做到不再受别人的干扰。
+    我相信，你的女朋友会喜欢认真做事的你的。
+    
+#### 学会倾听
+学会倾听和反馈技巧的意义在于解决和缓和人际关系、家庭矛盾。要达到这个目的，要做到以下几条：
+1. 提高沟通的欲望（注意：是沟通的欲望，不是表达的欲望），并抱有一颗同理心。你首先得愿意努力了解另一方的想法和感受，并尽量体谅对方，不管你是不是能真的完全理解TA。如果没有这个基础，再好的沟通技巧都是白瞎。
+2. 改变旧有的不良沟通习惯。比较常见的坏习惯，比如打断别人说话，抢着表达自己的观点，总把话题往自己身上扯，以己度人等等。
+3. 在日常生活中，必须要发表观点、提意见的时候，要先给出反馈式的回答，然后再提出自己的看法。反馈式的问答可以帮助你确定你真的听懂了别人的话；让别人觉得你有认真在听TA说话，是在和TA好好地讨论问题，而不是针锋相对的抬杠；帮助你平稳下情绪（如果激动了的话）；给你时间组织自己的观点和语言。
+4. 捕捉话语背后的讯息。注意倾听对方的情绪、顾虑、疑惑、喜怒哀乐，将这些讯息带给你的印象组织成语言，然后反馈给对方，可以使用这样的句式：“听起来，你好像感觉。。。”
+5. 表达关心。把关注点放在对方身上，不要急于表达自己。通过肢体语言和专注的态度来表达你的在意和关心。
+6. 承认对方的感受。确认对方的感觉，“我明白，你现在感觉。。。”会让对方了解，自己正在被听到。
+7. 不去妄加评断。永远不要试图改变他人的想法或感受，永远不要试图改变他人的想法和感受，永远不要改变他人的想法和感受。别再说，“你太敏感了”、“想开点”，纠结可不是想想就开了的。
+8. 总结对话内容。总结对方话语中的信息，而不加以自己的评判。“你刚刚是说，你打算。。。”。确保我们真的理解了对方的意思。
+9. 表达共情。尊重并接纳他人的感受，即使那些感受不符合我们的期待，在别人向你倾述心事的时候，试试说：“你能信任我，愿意和我讲这些，我真的很高兴”
+10. 使用积极倾听的信号。一些很小的积极表达，就可以表示我们在认真听，例如：“嗯嗯”，“我明白”，“然后呢”，“后来呢”，对方也会更愿意继续讲下去。
+11. 适时换话题。如果我们察觉到对方因为当前的话题而显得愤怒、过度激动、听了想打人。。。 可以先把话题引开，等对方平静下来，再看是否要继续讨论。
+
+#### 禁忌
+1. “行了吧”
+2. “你看着办”
+3. “你这么想，我也没啥办法”
+4. 把爱情的存在当成理所当然的事。每当我觉得我的爱情即将理所当然步入永恒的时候，实际上恰恰是危机来临的暴风前夜。从没有什么理所当然，一切都需要极力争取，包括爱情。任何好的事情都需要建设的，更别说长久美好的事情了，当你觉得一切都是理所当然的时候，正说明了你对这段感情缺乏理性的认可和建设，也许下一秒，爱情就决堤了。自以为步入永恒的时候，可能会因为觉得关系稳固而疏于经营或忽略了对方导致出现问题。
+5. 没有分寸。即使是夫妻，相濡以沫多年，该有的分寸、尊重一样都不能少。不尊重你的伴侣，就是不尊重自己。因为另一半，本来也是你自己的选择。李安在一次采访中说到“我做了人家的先生、父亲，不代表我就能很自然地赢得尊敬。我还是要不断地达到一个标准，来赚取他们的尊重。” 这就是分寸感。年轻的爱侣大约不会懂得，尊重不是天然就有的，需要两个人共同争取。爱一个人，不代表尊重对方。相爱，依靠长久的陪伴和亲密，维持似乎不那么难。而尊重，要求你无条件地信任对方，相信对方也和你一样，努力地经营着这段关系。
+分寸感的反面：
+    - 贬低对方。对方做错了一件事，你说：“你真蠢”，“你怎么这么笨？”
+    - 为自己辩解，“要不是你起晚了，咱们也不至于吃不上午饭！”甩锅给对方，是损耗关系质量的元凶。
+    - 嫌弃对方，“我都和你在一起来，你怎么还这么对我”
+    - 冷战，拒绝接受对方提出的协商条件，赌气不合作。然而一个人不爽，必然会影响两个人的关系质量。
+    当我们沉浸在爱的光芒里，往往忽略了一个事实：相守一生，意味着面临无数的巨大挑战。其中最难以接受的是，对方在接下来数十年中的变化。
+    不是换个发型那么简单，而是天翻地覆的变化。甚至会让你觉得，这个人不是你最初认识的他。
+    有时候，各退一步，维持人际关系原始、基本的原则：尊重、真诚，比一直进击、升温，叫嚣着让对方更关注自己好得多。
+    爱的再深，也要注意吃相呀。
+
+
+## 时光廊
+### 饮食
+1. 喜欢吃辣，不能太辣，微辣可以。
+    - 吃辣嘴巴会臭，便秘
+    - 牙齿不好，不能吃辣的
+    - 吃辣的会起痘痘
+    - 食宝街酸辣粉味道不错
+2. 喜欢吃甜品。
+    - 欠着哈根达斯
+    - 学校的绿豆沙冰好吃
+    - 薄荷糖不能吃太多
+    - 太甜的不行
+3. 喜欢鸡尾虾
+    - 需要好好练练剥虾
+    - 背部的黑线需要剥掉
+4. 喜欢吃薯片
+    - 黄瓜味的薯片
+    - 山药味的薯片
+    - 西虹市味的
+5. 多加醋，3勺+
+    - 学一小白房的面条和米粉，多加醋
+    - 麻辣烫加醋
+    - 饺子加醋
+6. 喜欢香菇酱
+7. 肉不能停，隔几天就要吃一顿
+    - 喜欢吃农园的香锅
+    - 不喜欢太肥的
+    - 喜欢猪皮
+    - 不要鸡皮
+    - 喜欢吃羊肉，不喜欢吃牛肉
+7. 喜欢酸辣汤
+    - 新中关纽约客味道不错
+    - 杭州、上海的酸辣汤比较黑暗
+8. 喜欢榴莲、菠萝蜜、猕猴桃、水蜜桃、西瓜
+    - 喜欢吃葡萄
+    - 桃子喜欢吃脆的
+    - 喜欢哈密瓜
+    - 喜欢挑榴莲玩，不会挑
+    - 想自己剥菠萝蜜（释迦果）
+9. 小宇不吃千岛酱
+    - 奶油还行，加上小饼干
+    - 喜欢买干果，吃的不多
+10. 小宇喜欢喝完达山牛奶
+    - 杯子喜欢奶嘴
+    - 需要按时喝牛奶，泡茶，黑芝麻糊
+11. 喜欢吃韩式料理
+    - 日料不喜欢
+    - 喜欢吃芝士，空心的年糕
+
+### 穿衣
+
+1. 喜欢穿小裙子
+    - 长裙
+    - 暖色调
+    - 蕾丝
+    - 带印花
+2. 很少穿裤子
+    - 牛仔裤很少
+    - 短裤穿的多
+3. 内衣内裤选维密
+    - 关注淘宝旗舰店，旗舰店不定期打折，很划算
+    - 临时需要的话，热风有合适的
+    - 喜欢可爱的，蕾丝的
+4. 喜欢丝绸睡衣
+    - 欠一件丝绸睡衣
+5. 很少穿毛衣
+    - 羊毛衫不错
+
+### 出行
+
+1. 出门在外带一次性床单被套、洗漱用品、化妆品
+    - 在外边住的时候提前买好一次性床单被套，带好洗漱用品
+    - 防晒霜、粉底、口红、唇膏、牙刷、牙膏、眉笔、皮筋、发卡、雨伞、遮阳伞
+2. 带一双舒服的鞋子
+    - 带上很舒服的鞋子
+    - 带上拖鞋
+3. 化妆品需要用保鲜膜胶带捆扎好
+    - 行李箱打包东西的时候摆放整洁
+    - 衣服叠好
+
+### 蚊虫
+
+1. 做好防蚊虫工作。带好驱蚊花露水和止痒花露水。
+    - 驱蚊花露水用于驱赶蚊虫，防蚊虫叮咬。用在出门前，或者进入蚊子密集区域前。驱蚊花露水生效时间为8小时。
+    - 止痒花露水用于被蚊虫叮咬之后，涂抹减轻酸痒感。
+2. 带上声波驱蚊器，插上电蚊香。
+3. 进出蚊帐的时候，关好蚊帐。
+4. 坐草坪的时候，看好虫子不要爬上毯子
+
+
+### 其他
+1. 睡前不要把手机放床上
+    - 手机，ipad，插座不要放在床上
+2. 宇宇热了空调温度要调到极低
+    - 晚上热的时候，把空调温度调到很低。把模式更改为换气。睡觉的时候把温度调高。
+3. 睡前整理一下床
+    - 铺一下床，把衣服耳机充电嚣拿下去
+4. 出门之前要把家里的开关关掉
+    - 关闭插线板、台灯、风扇
+5. 定期要用牙线棒清洁牙齿
+6. 不重要的事，按照小宇的意思做就好了
+7. 定期要刮胡子
+8. 摸小宇肚子的时候盖上被子，小宇露出来肚子会疼。
+9. 小宇一压力大，肚子就疼
+
+### 恋人间最好的状态
+1. 彼此的守护让对方觉得自己的存在很有意义。
+2. 世上根本没有不劳而获的命运，两个人的默契就是由一点一滴的了解积累来的。
+3. 积极融入对方的生活，吃饭根本不会看手机，因为彼此的聊天简直太吸引人了。
+4. 务必认真地对待对方的每一个计划和爱好，并鼓励对方一起努力完成。
+5. 让对方觉得未来可期
+6. 两个人在一起就是组队打怪，一起体验美好人生。
+7. 热情主动+积极乐观
+8. 心怀感激+由衷赞美
+9. 有话直说+当天解决
+10. 认真倾听+付出行动
+11. 保持新鲜感+不断进步
+爱是一种探险，是对未知的探索。这和友谊不同，友谊是可以停止在某种程度上的了解，恋爱确是不能停止的，是追求。这种企图并不以实用为目的，是生活经验的创造，也可以说是生命的推陈出新，也是不断地发现阻碍，要得到的是这一个过程，而不是过程的结果。
+我们从小在学校里就有人教如何学习，工作也有人带，却没有人能教我们如何去恋爱。其实恋爱真的需要磨合，你想像中的完美契合是不存在的。恋爱也需要学习，应该清楚恋人真实的需求，尊重自己的感受，衷心付出。不断在恋爱中调整、反思自己，两人相互关心、共同进步，生活越来越好，达到最好的状态。
+
+### 相处模式
+1. 想要什么说出来
+2. 有什么困难告诉对方
+3. 不要为了哄而哄
+4. 讨论时就是论事，不许夹带情绪私货
+5. 多想多做少说，多和对方说自己的心路历程，多问对方怎么想的
+6. 大多数时候正经点、认真点。
+
+### 周期活动
+1. 要定期开展一些活动
+2. 每周开一次家庭会议，说出对对方的不满，说出觉得自己没做好的地方
+3. 压马路
+4. 看电影
+5. 逛街
+6. 买衣服
+7. 通电话
+8. 见面
+9. 早安
+10. 晚安
+11. 520
+12. 讨论新闻和热点
+13. 交流对未来的看法
+14. 分享自己近期的收获
+15. 说出今天做的一件有意义的事
+16. 说出今天要做什么
+
+### 沟通交流
+1. 想要什么说出来
+2. 不想要什么说出来
+3. 需要解决办法的时候提供解决办法
+4. 需要安慰、支持、鼓励的时候提供安慰、支持、鼓励
+5. 关注对方的情绪，说话注意方式
+6. 争论时跳出自己的角色，换位思考。
+7. 不说脏话
+8. 不放狠话，不说不利于团结的话
+9. 闹矛盾之后要做总结，分析为什么而争论，写下吵架日志。
+
+## 后记
+和小宇相处中，我存在诸多问题。不诚实、不踏实、不守承诺、花心、不注意倾听、自卑、浮躁、眼高手低、懒惰、缺乏目标、缺失信仰、缺乏逻辑等等诸多问题。很庆幸小宇一直陪我走到了现在。这篇文章会继续写下来，不断记录，不断总结。让它来见证我们一起的成长。
