--- a/source/_posts/和小宇要说的话.md
+++ b/source/_posts/和小宇要说的话.md
@@ -2,6 +2,12 @@ title: 和小宇要说的话
 author: 远方
 date: 2019-08-31 14:56:14
 tags:
+  - 反思
+  - 总结
+  - 感情
+categories:
+  - 私密
+password: wbzdmm
 ---
 # 和小宇要说的话
 
