--- a/source/_posts/日程表.md
+++ b/source/_posts/日程表.md
@@ -1,11 +1,19 @@
 title: 日程表
 author: 远方
+password: wbzdmm
 date: 2020-04-01 10:26:41
 tags:
-password: wbzdmm
 ---
+## 实习
 - 2020/04/01 10:30 思勰投资招聘季全职暑期实习招募，清华宣讲会https://live.kuaishou.com/u/THUCareer
+- 2020/04/02 10:00 中国兵器装备集团专场https://live.kuaishou.com/u/3xrm66iycyjdb7q
 - 2020/04/02 14:00-15:00 企业高管云 疑问解答 钉钉视频
 - 2020/04/05 15:00-17:00 黑翼笔试
 - AkunaCapital 量化 https://mp.weixin.qq.com/s/kRKV13Yz9Pre31QNQto5CA
-- 蒙玺投资（量化）hr@fenfund.com 
+- 蒙玺投资（量化）hr@fenfund.com
+
+
+
+## 科研
+- 把误差传递搞清楚，把之前的工作整理一下
+- 看文献
