--- a/source/_posts/日程表.md
+++ b/source/_posts/日程表.md
@@ -11,7 +11,17 @@ tags:
 - 2020/04/05 15:00-17:00 黑翼笔试
 - AkunaCapital 量化 https://mp.weixin.qq.com/s/kRKV13Yz9Pre31QNQto5CA
 - 蒙玺投资（量化）hr@fenfund.com
+- 2020/04/09 金锝资产面试
 
+
+
+## 技能树
+- Markdown语法中关于链接的处理(&hexo)
+- Jupyter建立跳转链接，跳转到对应单元格
+- jupyter数据处理，逐步整理比较完善的框架
+- Hexo上传文件部分整理
+- Hexo忽略文件渲染以及html是否渲染带来的差异
+- Github个人主页如何被搜索引擎搜录
 
 
 ## 科研
@@ -19,3 +29,10 @@ tags:
 - 看文献
 - βγ异常点文献调研，给一个解释
 - 22Al使用刻度时的γ，误差传递重新算一下。
+- βγ异常点文献调研，给个解释
+- 对李老师组会上提到的βγ开窗导致异常的解释进行整理
+- 计算Al22βγ分支比时的γfit带来的误差传递
+- 本周讲文献
+- 读文献看看文献描述，文献表达
+- 每周一次讨论博士论文整理，βγ于本周给个中文稿
+- 能级纲图统一单位MeV，能级标注的位置调至左侧，标注自旋宇称
