--- a/source/_posts/日程表.md
+++ b/source/_posts/日程表.md
@@ -5,22 +5,22 @@ date: 2020-04-01 10:26:41
 tags:
 ---
 ## 实习
-- 2020/04/01 10:30 思勰投资招聘季全职暑期实习招募，清华宣讲会https://live.kuaishou.com/u/THUCareer
-- 2020/04/02 10:00 中国兵器装备集团专场https://live.kuaishou.com/u/3xrm66iycyjdb7q
-- 2020/04/02 14:00-15:00 企业高管云 疑问解答 钉钉视频
-- 2020/04/05 15:00-17:00 黑翼笔试
+- ~2020/04/01 10:30 思勰投资招聘季全职暑期实习招募，清华宣讲会https://live.kuaishou.com/u/THUCareer~
+- ~2020/04/02 10:00 中国兵器装备集团专场https://live.kuaishou.com/u/3xrm66iycyjdb7q~
+- ~2020/04/02 14:00-15:00 企业高管云 疑问解答 钉钉视频~
+- ~2020/04/05 15:00-17:00 黑翼笔试~
 - AkunaCapital 量化 https://mp.weixin.qq.com/s/kRKV13Yz9Pre31QNQto5CA
 - 蒙玺投资（量化）hr@fenfund.com
-- 2020/04/09 金锝资产面试
-
+- ~2020/04/09 金锝资产面试~
+- 从这几次面试中总结
 
 
 ## 技能树
-- Markdown语法中关于链接的处理(&hexo)
-- Jupyter建立跳转链接，跳转到对应单元格
+- ~Markdown语法中关于链接的处理(&hexo)~
+- ~Jupyter建立跳转链接，跳转到对应单元格~
 - jupyter数据处理，逐步整理比较完善的框架
-- Hexo上传文件部分整理
-- Hexo忽略文件渲染以及html是否渲染带来的差异
+- ~Hexo上传文件部分整理~
+- ~Hexo忽略文件渲染以及html是否渲染带来的差异~
 - Github个人主页如何被搜索引擎搜录
 
 
@@ -28,7 +28,7 @@ tags:
 - 把误差传递搞清楚，把之前的工作整理一下
 - 看文献
 - βγ异常点文献调研，给一个解释
-- 22Al使用刻度时的γ，误差传递重新算一下。
+- ~22Al使用刻度时的γ，误差传递重新算一下。~
 - βγ异常点文献调研，给个解释
 - 对李老师组会上提到的βγ开窗导致异常的解释进行整理
 - 计算Al22βγ分支比时的γfit带来的误差传递
