--- a/source/_posts/动态规划系列/动态规划系列.md
+++ b/source/_posts/动态规划系列/动态规划系列.md
@@ -17,15 +17,25 @@ categories:
 date: 2016-01-01 19:20:00
 ---
 # 动态规划系列
+  * [动态规划详解](/2016/01/01/动态规划系列/动态规划详解进阶)
+  * [动态规划答疑篇](/2016/01/01/动态规划系列/最优子结构)
+  * [动态规划设计：最长递增子序列](/2016/01/01/动态规划系列/动态规划设计：最长递增子序列)
+  * [编辑距离](/2016/01/01/动态规划系列/编辑距离)
+  * [经典动态规划问题：高楼扔鸡蛋](/2016/01/01/动态规划系列/高楼扔鸡蛋问题)
+  * [经典动态规划问题：高楼扔鸡蛋（进阶）](/2016/01/01/动态规划系列/高楼扔鸡蛋进阶)
+  * [动态规划之子序列问题解题模板](/2016/01/01/动态规划系列/子序列问题模板)
+  * [动态规划之博弈问题](/2016/01/01/动态规划系列/动态规划之博弈问题)
+  * [贪心算法之区间调度问题](/2016/01/01/动态规划系列/贪心算法之区间调度问题)
+  * [动态规划之KMP字符匹配算法](/2016/01/01/动态规划系列/动态规划之KMP字符匹配算法)
+  * [团灭 LeetCode 股票买卖问题](/2016/01/01/动态规划系列/团灭股票问题)
+  * [团灭 LeetCode 打家劫舍问题](/2016/01/01/动态规划系列/抢房子)
+  * [动态规划之四键键盘](/2016/01/01/动态规划系列/动态规划之四键键盘)
+  * [动态规划之正则表达](/2016/01/01/动态规划系列/动态规划之正则表达)
+  * [最长公共子序列](/2016/01/01/动态规划系列/最长公共子序列)
 
 我们公众号最火的就是动态规划系列的文章，也许是动态规划问题有难度而且有意思，也许因为它是面试常考题型。不管你之前是否害怕动态规划系列的问题，相信这一章的内容足以帮助你消除对动态规划算法的恐惧。
-
 具体来说，动态规划的一般流程就是三步：**暴力的递归解法 -> 带备忘录的递归解法 -> 迭代的动态规划解法**。
-
 就思考流程来说，就分为一下几步：**找到状态和选择 -> 明确 dp 数组/函数的定义 -> 寻找状态之间的关系**。
-
 这就是思维模式的框架，**本章都会按照以上的模式来解决问题，辅助读者养成这种模式思维**，有了方向遇到问题就不会抓瞎，足以解决一般的动态规划问题。
 
-欢迎关注我的公众号 labuladong，方便获得最新的优质文章：
 
-![labuladong二维码](images/LeetCode破局攻略/qrcode.jpg)
