--- a/source/_posts/算法思维系列/算法思维系列.md
+++ b/source/_posts/算法思维系列/算法思维系列.md
@@ -8,9 +8,24 @@ categories:
 date: 2016-01-01 19:20:00
 ---
 # 算法思维系列
-
+  * [算法学习之路](/2016/01/01/算法思维系列/算法学习之路)
+  * [回溯算法详解](/2016/01/01/算法思维系列/回溯算法详解修订版)
+  * [回溯算法团灭排列、组合、子集问题](/2016/01/01/高频面试系列/子集排列组合)
+  * [二分查找详解](/2016/01/01/算法思维系列/二分查找详解)
+  * [双指针技巧总结](/2016/01/01/算法思维系列/双指针技巧)
+  * [滑动窗口技巧](/2016/01/01/算法思维系列/滑动窗口技巧)
+  * [twoSum问题的核心思想](/2016/01/01/算法思维系列/twoSum问题的核心思想)
+  * [常用的位操作](/2016/01/01/算法思维系列/常用的位操作)
+  * [拆解复杂问题：实现计算器](/2016/01/01/数据结构系列/实现计算器)
+  * [烧饼排序](/2016/01/01/算法思维系列/烧饼排序)
+  * [前缀和技巧](/2016/01/01/算法思维系列/前缀和技巧)
+  * [字符串乘法](/2016/01/01/算法思维系列/字符串乘法)
+  * [FloodFill算法详解及应用](/2016/01/01/算法思维系列/FloodFill算法详解及应用)
+  * [区间调度之区间合并问题](/2016/01/01/算法思维系列/区间调度问题之区间合并)
+  * [区间调度之区间交集问题](/2016/01/01/算法思维系列/区间交集问题)
+  * [信封嵌套问题](/2016/01/01/算法思维系列/信封嵌套问题)
+  * [几个反直觉的概率问题](/2016/01/01/算法思维系列/几个反直觉的概率问题)
+  * [洗牌算法](/2016/01/01/算法思维系列/洗牌算法)
+  * [递归详解](/2016/01/01/算法思维系列/递归详解)
 本章包含一些常用的算法技巧，比如前缀和、回溯思想、位操作、双指针、如何正确书写二分查找等等。
 
-欢迎关注我的公众号 labuladong，方便获得最新的优质文章：
-
-![labuladong二维码](images/LeetCode破局攻略/qrcode.jpg)
