--- a/source/_posts/高频面试系列/高频面试系列.md
+++ b/source/_posts/高频面试系列/高频面试系列.md
@@ -8,9 +8,23 @@ categories:
 date: 2016-01-01 19:20:00
 ---
 # 高频面试系列
-
+  * [如何实现LRU算法](/2016/01/01/高频面试系列/LRU算法)
+  * [如何高效寻找素数](/2016/01/01/高频面试系列/打印素数)
+  * [如何计算编辑距离](/2016/01/01/动态规划系列/编辑距离)
+  * [如何运用二分查找算法](/2016/01/01/高频面试系列/koko偷香蕉)
+  * [如何高效解决接雨水问题](/2016/01/01/高频面试系列/接雨水)
+  * [如何去除有序数组的重复元素](/2016/01/01/高频面试系列/如何去除有序数组的重复元素)
+  * [如何寻找最长回文子串](/2016/01/01/高频面试系列/最长回文子串)
+  * [如何k个一组反转链表](/2016/01/01/高频面试系列/k个一组反转链表)
+  * [如何判定括号合法性](/2016/01/01/高频面试系列/合法括号判定)
+  * [如何寻找消失的元素](/2016/01/01/高频面试系列/消失的元素)
+  * [如何寻找缺失和重复的元素](/2016/01/01/高频面试系列/缺失和重复的元素)
+  * [如何判断回文链表](/2016/01/01/高频面试系列/判断回文链表)
+  * [如何在无限序列中随机抽取元素](/2016/01/01/高频面试系列/水塘抽样)
+  * [如何调度考生的座位](/2016/01/01/高频面试系列/座位调度)
+  * [Union-Find算法详解](/2016/01/01/算法思维系列/UnionFind算法详解)
+  * [Union-Find算法应用](/2016/01/01/算法思维系列/UnionFind算法应用)
+  * [一行代码就能解决的算法题](/2016/01/01/高频面试系列/一行代码解决的智力题)
+  * [二分查找高效判定子序列](/2016/01/01/高频面试系列/二分查找判定子序列)
 8 说了，本章都是高频面试题，配合前面的动态规划系列，祝各位马到成功！
 
-欢迎关注我的公众号 labuladong，方便获得最新的优质文章：
-
-![labuladong二维码](images/LeetCode破局攻略/qrcode.jpg)
