--- a/source/_posts/数据结构系列/数据结构系列.md
+++ b/source/_posts/数据结构系列/数据结构系列.md
@@ -8,9 +8,15 @@ categories:
 date: 2016-01-01 19:20:00
 ---
 # 数据结构系列
-
+  * [学习算法和刷题的思路指南](/2016/01/01/算法思维系列/学习数据结构和算法的高效方法)
+  * [学习数据结构和算法读什么书](/2016/01/01/算法思维系列/为什么推荐算法4)
+  * [二叉堆详解实现优先级队列](/2016/01/01/数据结构系列/二叉堆详解实现优先级队列)
+  * [LRU算法详解](/2016/01/01/高频面试系列/LRU算法)
+  * [二叉搜索树操作集锦](/2016/01/01/数据结构系列/二叉搜索树操作集锦)
+  * [特殊数据结构：单调栈](/2016/01/01/数据结构系列/单调栈)
+  * [特殊数据结构：单调队列](/2016/01/01/数据结构系列/单调队列)
+  * [设计Twitter](/2016/01/01/数据结构系列/设计Twitter)
+  * [递归反转链表的一部分](/2016/01/01/数据结构系列/递归反转链表的一部分)
+  * [队列实现栈\|栈实现队列](/2016/01/01/数据结构系列/队列实现栈栈实现队列)
 这一章主要是一些特殊的数据结构设计，比如单调栈解决 Next Greater Number，单调队列解决滑动窗口问题；还有常用数据结构的操作，比如链表、树、二叉堆。
 
-欢迎关注我的公众号 labuladong，方便获得最新的优质文章：
-
-![labuladong二维码](images/LeetCode破局攻略/qrcode.jpg)
