--- a/source/_posts/动态规划系列/高楼扔鸡蛋问题.md
+++ b/source/_posts/动态规划系列/高楼扔鸡蛋问题.md
@@ -122,7 +122,10 @@ def dp(K, N):
     return res
 ```
 这个 for 循环就是下面这个状态转移方程的具体代码实现：
-$$ dp(K, N) = \min_{0 <= i <= N}\{\max\{dp(K - 1, i - 1), dp(K, N - i)\} + 1\}$$
+
+
+$ dp(K, N) = \min_{0 <= i <= N}\{\max\{dp(K - 1, i - 1), dp(K, N - i)\} + 1\} $
+
 首先我们根据 `dp(K, N)` 数组的定义（有 `K` 个鸡蛋面对 `N` 层楼，最少需要扔几次），**很容易知道 `K` 固定时，这个函数一定是单调递增的**，无论你策略多聪明，楼层增加测试次数一定要增加。
 那么注意 `dp(K - 1, i - 1)` 和 `dp(K, N - i)` 这两个函数，其中 `i` 是从 1 到 `N` 单增的，如果我们固定 `K` 和 `N`，**把这两个函数看做关于 `i` 的函数，前者随着 `i` 的增加应该也是单调递增的，而后者随着 `i` 的增加应该是单调递减的**：
 ![](/images/LeetCode破局攻略/扔鸡蛋/2.jpg)
